Adiciona o Sidenav e ajustes de layout e estilo do toolbar e footer.

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,5 @@
 .footer {
-    background: #004f4f;;
-    color:#0dd;
+    background: #004f4f;
     text-align: center;
     padding: 10px;
     position: fixed;
