--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,7 @@
-<mat-toolbar>
-    <span>TAREFAS</span>
-</mat-toolbar>
+<mat-toolbar class="custom-toolbar">
+    <button mat-icon-button (click)="openSideNav()">
+        <mat-icon>menu</mat-icon>
 
+    </button>
+    <h1 class="title">TAREFAS</h1>
+</mat-toolbar>
