--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,28 @@
-<app-toolbar></app-toolbar>
+<div class="main-container">
 
-<router-outlet />
+    <app-toolbar [sidenav]="sidenav"></app-toolbar>
 
-<app-footer></app-footer>
+    <mat-sidenav-container class="container">
+
+        <mat-sidenav #sidenav mode="side" class="sidenav">
+            <mat-nav-list>
+                <a mat-list-item routerLink="/" (click)="sidenav.close()">
+                    <span class="nav-content">
+                        <mat-icon>home</mat-icon>
+                        <span>Home</span>
+                    </span>
+                </a>
+            </mat-nav-list>
+        </mat-sidenav>
+
+        <mat-sidenav-content>
+
+            <router-outlet></router-outlet>
+
+        </mat-sidenav-content>
+
+    </mat-sidenav-container>
+
+    <app-footer></app-footer>
+
+</div>
