--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body {
+html,
+body {
+    margin: 0;
+    padding: 0;
     height: 100%;
-    background-color: #101414; 
+    background-color: #101414;
 }
 
-body { 
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mat-icon {
+    color: #0dd !important;
+}
+
+h1,
+p,
+span {
+    color: #0dd !important;
 }
